--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -91,7 +91,7 @@
 
   <section id="about-page" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-  <h1 align="center"><b>TRIDENT - Navigational Aid for runners who are blind</b></h1>
+  <h1 align="center"><b>TRIDeNT - Navigational aid for runners who are blind</b></h1>
 
       <div class="devicer"></div>
     </div>
@@ -109,17 +109,17 @@
 
 			<h3 class ="uppermargin"><strong>My role in this longitudinal study</strong></h3>
 			<p class="justified paragraph">
-				This was a two-year project done in collaboration with <b class="textbackground3"> TOYOTA</b>. It included an overall team of 5 people, cutting across diversities, including Designers, HCI Researchers, and a Faculty as the chief investigator.<b class="textbackground3"> As the lead user researcher </b>, I successfully helped build the prototype to aid blind runners in leading the student team in research-related activities.</p>
+				This was a two-year project done in collaboration with <b class="textbackground3"> TOYOTA</b>. It included an overall team of 5 people, cutting across diversities, including Designers, HCI Researchers.<b class="textbackground3"> As the lead user researcher </b>, I successfully helped build the prototype to aid blind runners in leading the team in all UX research related activities.</p>
 
 		<h3 class="uppermargin"><strong>Outcome of the project</strong></h3>
-		<p class="justified paragraph"> As a team, we prioritized user research and narrowed down on the type of device that can fit the users' needs.</p>
-		<p class="justified paragraph"> We chose 3 different sensors (Infrared, Ultrasonic, and LIDAR) to incorporate into the device, and from the research material gathered,<b class="textbackground3"> we decided to go with a RUNNING BELT - The TRIDENT. </b>
-		We determined the features from interviews conducted with blind joggers and runners.</p>
+		<p class="justified paragraph"> Prioritization of user research and narrowing down on the type of device that can fit the users' needs.</p>
+		<p class="justified paragraph"> Selection of 3 different sensors (Infrared, Ultrasonic, and LIDAR) to incorporate into the device, and from the research material gathered,<b class="textbackground3"> Outcome - RUNNING BELT - The TRIDeNT. </b>
+		I determined the features to be developed from interviews conducted with blind joggers and runners.</p>
 
 
 			<img src="assets/img/Personal/prototype_color.png" class="avatar9 uppermargin" alt="An image of the prototype">
 
-		<p class="justified paragraph"><b class="textbackground3"> TRIDENT </b> stands for Tri-Positional Detection and Navigational Technology. The system's key features include:
+		<p class="justified paragraph"><b class="textbackground3"> TRIDeNT </b> stands for Tri-Positional Detection and Navigational Technology. The system's key features include:
 			<ul class="paragraph">
 				<li>
 					Enhanced awareness of surroundings.
@@ -128,7 +128,7 @@
 					Detection of obstacles above and below the waist.
 				</li>
 				<li>
-						Modes for long and short-range detection.
+					Modes for long and short-range detection.
 				</li>
 				<li>
 					Choice of output.
@@ -138,10 +138,10 @@
 
 
 
-<h3 class ="uppermargin"><strong>Challenges we faced along the way</strong></h3>
+<h3 class ="uppermargin"><strong>Challenges faced along the way</strong></h3>
 <ul><li class="justified paragraph">  A dearth of existing literature about projects and devices used in this space. </li>
-<li class="justified paragraph"> Testing with real users - a problem given pandemic protocols.</li>
-<li class="justified paragraph"> Recruitment of participants was a hard and long process due to the nature of the target audience.</li>
+<li class="justified paragraph"> Testing with real users - a problem given pandemic protocols (Eventually maneged to test it on obstacle courses).</li>
+<li class="justified paragraph"> Recruitment of participants was a hard and long process due to the nature of  target audience.</li>
 <li class="justified paragraph">
 	Asynchronous coordination during prototype building extended the time frame of development.
 </li>
@@ -155,8 +155,8 @@
 <div class="container">
 	<h3 class ="uppermargin"><strong>Research Gap with respect to blind runners</strong></h3>
 	<ul>
-		<li class="justified paragraph">While there is a lot of buzz in the market related to accessibility related products with respect to individuals who are blind, there is hardly any device that pops up when specific to running</span></li>
-		<li class="justified paragraph">There is not enough documented evidence to suggest that the existing research aids blind runners.</span></li>
+		<li class="justified paragraph">While there is a lot of buzz in the market related to accessibility related products with respect to individuals who are blind, there is hardly any device that pops up specific to running.</span></li>
+		<li class="justified paragraph">There is not enough documented evidence to suggest existing research aids blind runners.</span></li>
 		<li class="justified paragraph">Efficiency of many prototypes yet to be tested in real-world setting.</span> </li>
 		<li class="justified paragraph">It is still unknown whether users would be able to connect and run the setup successfully should there be a reassembly or a first time assembly. </span></li>
 			<li class="justified paragraph">Ease of access and wear of the prototype among prospective users.</span></li>
@@ -166,7 +166,7 @@
 
 <div class="container">
 	<h3 class ="uppermargin"><strong>UX Research Methods - path to the running belt</strong></h3>
-	<p class="justified paragraph">To get a solution that would cater to the user's needs, and compelled by the need to plug the research gaps, the team divided the user research into <b>four phases</b>. </p>
+	<p class="justified paragraph">To get a solution that would cater to the user's needs, and compelled by the need to plug the research gaps, user research into divided into <b>four phases</b>. </p>
 	<p class="justified paragraph">	The first phase involved <b class="textbackground3">reviews and analysis</b> consisting of:
 		<ul class="justified paragraph">
 			<li>
@@ -203,7 +203,7 @@
 	<div class="containerblue">
 		<h3 class="uppermargin3 color-x" align="center"><Strong>LITERATURE REVIEWS</Strong></h3>
 		<p class="justified countermargin" style="color:#000">
-			The team collected several works related to prototypes for individuals who are blind. This rigorous search helped the team to understand the development from other researchers' perspectives. I populated and read through research papers to gain insight and information on the given topic, identify gaps in previous research. Overall, we wanted to have a solid background for our study.
+			I populated and read through research papers to gain insight and information on the given topic, identify gaps in previous research related to wearables for blind runners. This rigorous search helped the team to understand the development from other researchers' perspectives. I wanted to have a solid background for our study.
 		</p>
 
 		<div class="uppermargin3">
@@ -238,7 +238,7 @@
 	<div>
 		<h3 align="center"><Strong>MARKET ANALYSIS</Strong></h3>
 		<p class="justified countermargin">
-			The team looked at different products available on the market. The competitive analysis enabled us to go through the strengths and weaknesses of the various devices available, used by people who suffer from vision impairments. Trying out the devices gave an understanding of the features and functions and informed the design process. User reviews helped us understand what the users think about the different products.
+			Then, I looked at different products available on the market. The competitive analysis enabled the team to go through the strengths and weaknesses of the various devices available, used by people who deal with any form of vision impairment. Trying out the devices gave an understanding of the features and functions and informed the design process. User reviews helped the team to understand what the users think about the different products.
 		</p>
 		<div class="countermargin" align="center">
 			<span class="fa fa-star checked"></span>
@@ -268,7 +268,7 @@
 	<div class="containerblue bottompadding">
 		<h3 class="uppermargin3 color-x" align="center"><Strong>USER INTERVIEWS</Strong></h3>
 		<p class="justified countermargin" style="color:#000">
-			We completed an <b>interview study of individuals </b>with visual impairments and their exercise tendencies and experiences. Through this interview, we further explored the commonly used techniques for running and got feedback on the device idea we were trying to prototype. The blind and visually impaired individuals came with a variety of running experiences ranging from casual hobbits runners to marathon runners and everyone in between.
+			I ran 1-1 <b> context interview of individuals </b>with visual impairments and their exercise tendencies and experiences. Through this interview, my team and I further explored the commonly used techniques for running and got feedback on the device idea we were trying to prototype. The blind and visually impaired individuals came with a variety of running experiences ranging from casual hobbits runners to marathon runners and everyone in between.
 		</p>
 		<div class="row">
 			<div class="col-md-3 offset-1 facts uppermargin" align="center">
@@ -342,7 +342,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 			<p class="justified paragraph"> <b class="textbackground3">Empathy:</b> All the above methods help generate empathy for the users by identifying the type of users who may use the device and their pain points. </p>
 
 			<p class="justified paragraph">
-			<b class="textbackground3">Granularity of information:</b> We looked at how much info does the user get? Can they learn about unusual obstacles (e.g. construction, tree branches,  sudden hurdles)? </p>
+			<b class="textbackground3">Granularity of information:</b> How much information does the user get? Can they learn about unusual obstacles (e.g. construction, tree branches,  sudden hurdles)? </p>
 
 			<p class="justified paragraph"><b class="textbackground3">Granularity of Feedback:</b> How much feedback is the device going to share? How much impact does the environment have a part in the decision making? </p>
 
@@ -355,7 +355,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 		<div class="container">
 			<h3 class="uppermargin" align="center"><Strong>BODYSTORMING, STORYBOARD AND AFFINITY MAP</Strong></h3>
 			<p>
-				We decided to create an affinity map to populate the insights and draw significant themes from the research and the profiling. This exercise allowed us to focus on the critical aspects of the study and what users want, giving the prototype building a direction to focus. Parallelly, the team also conducted bodystorming and created storyboards to understand the situational aspects of the device in terms of feasibility and work.
+				I was insistent the team create an affinity map to populate the insights and draw significant themes from the research and profiling. This exercise allowed us to focus on the critical aspects of the study and what users want, giving the prototype building a direction to focus. Parallelly, the team also conducted bodystorming and created storyboards to understand the situational aspects of the device in terms of feasibility and work.
 			</p>
 			<div class=" uppermargin bottompadding ">
 				<figure>
@@ -411,7 +411,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 									</div>
 
 									<div class="col-md-6">
-										 <p class="justified paragraph">We named the device, the TRIDENT. <b class="textbackground3">TRIDENT</b> stands <b class ="textbackground3"> for Tri-Positional Detection and Navigational Technology.</b></p>
+										 <p class="justified paragraph">We named the device, the TRIDeNT. <b class="textbackground3">TRIDeNT</b> stands <b class ="textbackground3"> for Tri-Positional Detection and Navigational Technology.</b></p>
 									</div>
 									<div class="col-md-6">
 										 <img src="assets/img/Personal/Prototype_back.png" class="img-fluid" alt="Rear image of the prototype device. Device consists of three sensors in the front with buzzers attached to the back.">
@@ -427,21 +427,21 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 
 							<p class="justified paragraph">The users do not have to spend money on devices that are expensive and bear only one sensor as this <b class="textbackground3"> prototype is a handy alternative </b>. </p>
 
-							<p class="justified paragraph">We anticipate that people in Low-and Middle income countries would be able to afford the device should it hit the market. </p>
+							<p class="justified paragraph">The team anticipated that people in Low-and Middle income countries would be able to afford the device should it hit the market. </p>
 
 						<p class="justified paragraph">This device can be used for <b class="textbackground3"> regular walking as well, extending from the runners </b>. </p>
 
-						<p class="justified paragraph">	We have made this belt <b class="textbackground3"> non-intrusive </b> as possible. Majority of the users feel that the belt is lightweight and can be used as an alternative to the devices currently available.</p>
+						<p class="justified paragraph">	This belt is as <b class="textbackground3"> non-intrusive </b> as possible. Majority of the users feel that the belt is lightweight and can be used as an alternative to the devices currently available.</p>
 						</div>
 
 						<div class="container">
-									<h3 class="uppermargin"><strong>Next Steps</strong></h3>
-									<p class="justified paragraph">We would like to try the prototpe on users who are blind to understand what they think about it for daily wear and tear. In addition to that, we would like to go one step further in adding a camera to detect obstacles on its path and notifying the users, a field where there is a lot of research going on. Last, we would like to test the prototype in different terrains, which is currently impeaded due to the ongoing Global Pandemic, the COVID-19.</p>
+									<h3 class="uppermargin"><strong>What we wished to have happened...</strong></h3>
+									<p class="justified paragraph">We would have liked to have gone one step further and add a camera to detect obstacles on its path and notifying the users - a field where there is a lot of research going on. We would have also liked to test the prototype in different terrains, which was impeaded due to the ongoing Global Pandemic, the COVID-19.</p>
 
 
 						<h3 class="uppermargin"><b>Takeaways</b></h2>
 						<p class="justified paragraph bottompadding">
-							From start to finish, this project has been a learning curve. I realized that empathy generation is key because of the type of audience involved. In addition to that, I also learned to employ the human aspect in research. For without connection and interaction with people, I believe that nothing is possible. Figuring out the research techniques and drawing the right insights is a challenge in itself. Additionally, as we dealt with a niche audience, recruitment for context interviews and observation was also a challenge. Here is hoping that this prototype becomes a product someday. I hope to take this research into the industry where I can work to develop products beneficial for people, one product at a time.
+							From start to finish, this project was a learning curve. I realized that empathy generation is key because of the type of audience involved. In addition to that, I also learned to employ the human aspect in research. Without connection and interaction with people, I believe that nothing is possible. Figuring out the research techniques and drawing the right insights is a challenge in itself. Additionally, as we dealt with a niche audience, recruitment for context interviews and observation was also a challenge. Here is hoping that this prototype becomes a product someday. I hope to take this research into the industry where I can work to develop products beneficial for people, one product at a time.
 						</p>
 						</div>
 </main>
