--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -109,7 +109,7 @@
 
 			<h3 class ="uppermargin"><strong>My role in this longitudinal study</strong></h3>
 			<p class="justified paragraph">
-				This was a two-year project done in collaboration with <b class="textbackground3"> TOYOTA</b>. It included an overall team of 5 people, cutting across diversities, including Designers, HCI Researchers.<b class="textbackground3"> As the lead user researcher </b>, I successfully helped build the prototype to aid blind runners in leading the team in all UX research related activities.</p>
+				This was a two-year project done in collaboration with <b class="textbackground3"> TOYOTA</b>. It included a team of 5 people, cutting across diversities, including Designers, and HCI Researchers.<b class="textbackground3"> As the lead user researcher </b>, I successfully helped build the prototype to aid blind runners in leading the team in all UX research related activities.</p>
 
 		<h3 class="uppermargin"><strong>Outcome of the project</strong></h3>
 		<p class="justified paragraph"> Prioritization of user research and narrowing down on the type of device that can fit the users' needs.</p>
@@ -268,7 +268,7 @@
 	<div class="containerblue bottompadding">
 		<h3 class="uppermargin3 color-x" align="center"><Strong>USER INTERVIEWS</Strong></h3>
 		<p class="justified countermargin" style="color:#000">
-			I ran 1-1 <b> context interview of individuals </b>with visual impairments and their exercise tendencies and experiences. Through this interview, my team and I further explored the commonly used techniques for running and got feedback on the device idea we were trying to prototype. The blind and visually impaired individuals came with a variety of running experiences ranging from casual hobbits runners to marathon runners and everyone in between.
+			I ran 1-1 <b> context interviews with individuals </b> with visual impairments and their exercise tendencies and experiences. Through this interview, my team and I further explored the commonly used techniques for running and got feedback on the device idea we were trying to prototype. The blind and visually impaired individuals came with a variety of running experiences ranging from casual hobbits runners to marathon runners and everyone in between.
 		</p>
 		<div class="row">
 			<div class="col-md-3 offset-1 facts uppermargin" align="center">
@@ -436,7 +436,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 
 						<div class="container">
 									<h3 class="uppermargin"><strong>What we wished to have happened...</strong></h3>
-									<p class="justified paragraph">We would have liked to have gone one step further and add a camera to detect obstacles on its path and notifying the users - a field where there is a lot of research going on. We would have also liked to test the prototype in different terrains, which was impeaded due to the ongoing Global Pandemic, the COVID-19.</p>
+									<p class="justified paragraph">We would have liked to have gone one step further and add a camera to detect obstacles on its path and notifying the users - a field where there is a lot of research going on. We would have also liked to test the prototype in different terrains, which was impeaded due to the Global Pandemic - COVID-19.</p>
 
 
 						<h3 class="uppermargin"><b>Takeaways</b></h2>
