--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 
     <section id="about-page" class="d-flex flex-column justify-content-center">
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
-    <h1 align="center"><b>Hello Again! 👋</b></h1>
+    <h1 align="center"><b>Hello! 👋</b></h1>
 
         <div class="devicer"></div>
       </div>
