Major changes to the site.

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+  <link href='https://fonts.googleapis.com/css?family=Lexend Deca' rel='stylesheet'>
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -76,7 +76,7 @@
 
     <section id="about-page" class="d-flex flex-column justify-content-center">
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
-    <h1 align="center"><b>Hello! 👋</b></h1>
+    <h1 align="center"><b class="headers"> Bio </b></h1>
 
         <div class="devicer"></div>
       </div>
@@ -87,12 +87,12 @@
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
-      <div class="container uppermargin" data-aos="fade-up">
+      <div class="container" data-aos="fade-up">
       <p class ="paragraph">
 		  Glad you stopped by! Hello once again! I am Anirudh - a soccer loving, tea drinking, User Experience Researcher with an ever bleeding passion for accessibility, diversity, and inclusion. I've worked for companies like Grid Dynamics (Client - Google), Thomson Reuters, UserWorks, Inc. and LTI. I hold a graduate degree in Human-Centered Computing from the University of Maryland, Baltimore County.</p>
 
 
-            <img src="assets/img/Personal/Ani_New.jpg" class="avatar6" alt="Image of Anirudh Smiling at you.">
+            <img src="assets/img/Personal/Ani_New.jpg" class="avatar6 uppermargin" alt="Image of Anirudh Smiling at you.">
 
 
             <!-- <p class="justified paragraph">
@@ -106,16 +106,16 @@
 
               <p class="paragraph"></p>
 
-              <h3 class ="uppermargin3" > Me and UX</h3>
+              <h3 class ="uppermargin headers"> <b>Me and UX</b></h3>
               <p class="paragraph">
-              By leveraging UX Research, I get into the users' minds whom businesses serve. I help identify the clients' and stakeholders' needs, thereby increasing the product's value. <p class="paragraph justified"> I employ a mixed methods approach (viz., Context Interviews, Surveys, Benchmarking) and provide customer experience insights to businesses. With a specialized working knowledge of accessibility standards and tools (viz., JAWS, NVDA, ZoomText), I make the workplace, and products more inclusive and accessible. My pioneering strategies involving participants with disabilities in my usability study at Thomson Reuters brought about a fundamental change in the company's participant recruitment policies for product testing.
+              By leveraging UX Research, I get into the users' minds whom businesses serve. I help identify the clients' and stakeholders' needs, thereby increasing the product's value. <p class="paragraph justified"> I employ a mixed methods approach (viz., Context Interviews, Surveys, Benchmarking) and provide customer experience insights to businesses. With a specialized working knowledge of accessibility standards and tools (viz., JAWS, NVDA, ZoomText), I make the workplace, and products more inclusive and accessible.
 
             </p></p>
 
             <p class="paragraph">I bring a unique blend of UX research experience from multiple domains and Accessibility, thereby helping businesses deliver products that cater to diverse audiences.
             </p>
 
-            <h3 class="uppermargin"> Other things you may want to know about me...</h3>
+            <h3 class="uppermargin headers"><b> Other things you may want to know about me...</b></h3>
             <!-- <div class="row">
               <div class="col-md-8"> -->
                 <p class=" paragraph">When idle, books offer a place of solace. I love mythology, modern history, and sport biographies. If you do not find me at home, I am either traveling, or sitting at a Barnes & Noble store somewhere, thinking about what book to buy.</p>
@@ -125,10 +125,9 @@
                  <img src="assets/img/Personal/Main Image 3.png" class="avatar9" alt="Circular image of Anirudh Nagraj pointing to the mountains.">
               </div> -->
             </div>
-            <h3 class="uppermargin" align="center"><strong>Want to get in touch? Let's chat!</strong></h3>
+            <h3 class="uppermargin headers" align="center"><strong>Want to get in touch? Let's chat!</strong></h3>
             <div class="social-links" align="center">
               <a href="https://www.twitter.com/anirudh_nagraj" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="https://www.instagram.com/anirudh.nagraj" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
               <a href="https://www.linkedin.com/in/anirudh-nagraj/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       		<a href="https://medium.com/@nagarajan.anirudh" target="_blank" class="medium"><i class="bx bxl-medium"></i></a>
             </div>
