--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, user-scalable=no">
+<meta name="viewport" content="width=device-width, user-scalable=yes">
   <title>Anirudh Nagraj - Home</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -11,7 +11,7 @@
   <!-- Favicons -->
   <link href="assets/img/Personal/Logo3.png" rel="icon">
   <link href="assets/img/Personal/Logo3.png" rel="apple-touch-icon">
-
+<link href='https://fonts.googleapis.com/css?family=Lexend Deca' rel='stylesheet'>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -71,20 +71,24 @@
   <!-- ======= Hero Section ======= -->
 
   <section id="hero" class="d-flex flex-column justify-content-center">
-  <h2 align="center"><b>Hello! 👋🏽 I am Anirudh! </b></h2>
+  <h2 align="center"> <b class="headers">Hello! I am Anirudh Nagraj </b></h2>
+   
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-        <img src="assets/img/Personal/Profilephoto.png" class="avatar6" alt="Image of Anirudh Smiling">
+        <img src="assets/img/Personal/Profilephoto2.jpg" class="avatar21 " alt="Image of Anirudh Smiling">
 
 
 
           <div>
-             <p class="paragraph3" align="center">I am a<b class="textbackground2"> User Experience Researcher</b>. I come with an engineering background and a deep-rooted passion for inclusive design and accessibility. I employ various user research methods and accessibility tools to help build <b class="textbackground2">impactful products</b>, bringing customers and businesses closer to one another. <b class="textbackground2 "></b> <!-- At Reuters,  </p> -->
+             <p class="paragraph3" align="center"><b class="textbackground2"> User Experience Researcher</b></p> 
+             <div class="devicer2"></div>
+    </div><!-- At Reuters,  </p> -->
+              <p class="paragraph3" align="center"> I come with an engineering background and a deep-rooted passion for inclusive design and accessibility. I combine a mixed-methods research approach and accessibility concepts to help build <b class="textbackground2">impactful products</b>, bringing customers and businesses closer to one another.</p>
         </div>
 
     </div>
 
-    <div class="center bottompadding"><a href ="projects.html"><button class="custom-btn btn-1"> VIEW WORK </button></a>
+    <div class="center bottompadding"><a href ="projects.html"><button class="custom-btn btn-1 headers"> VIEW WORK </button></a>
       </div>
     </div>
          <!--
@@ -98,7 +102,8 @@
       <!-- <div class="center"><button class="custom-btn1 btn-2" onclick="window.location.href='index.html#portfolio'" > VIEW PROJECTS </a></button> </div> -->
     </div>
   </div>
-
+  
+   
 </main><!-- End Hero -->
 
   <!-- <div class="devicer"></div> -->
@@ -121,7 +126,6 @@
         <p>Soccer, Travel, or just chill, let's chat!</p>
       <div class="social-links">
         <a href="https://www.twitter.com/anirudh_nagraj" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.instagram.com/anirudh.nagraj" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.linkedin.com/in/anirudh-nagraj/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
 		      <a href="https://medium.com/@nagarajan.anirudh"  class="medium"><i class="bx bxl-medium"></i></a>
       </div>
