--- a/postal.html
+++ b/postal.html
@@ -14,7 +14,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+  <link href='https://fonts.googleapis.com/css?family=Lexend Deca' rel='stylesheet'>
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -78,7 +78,7 @@
 
     <section id="about-page" class="d-flex flex-column justify-content-center">
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
-    <h1 align="center"><b>USPS.com® Website Usability Study at UserWorks, Inc.</b></h1>
+    <h1 align="center"><b class="headers">USPS.com® Website Usability Study at UserWorks, Inc.</b></h1>
 
         <div class="devicer"></div>
       </div>
@@ -86,32 +86,32 @@
 
     <div class="container">
       <p class ="uppermargin3">
-    				<h3><b>What's this about?</b></h3>
+    				<h3 class="headers"><b>What's this about?</b></h3>
     				<p class=" justified paragraph">
-    					<b class="textbackground3"> While at UserWorks, I conducted a  study to generate recommendations for the United States Postal Service website. </b> The personnel at USPS wanted to check the interaction of users on new pages that included international shipping. They also wanted us to analyze features that could be added in the future, per what the users mentioned.
+    					<b class="textbackground2"> While at UserWorks, I conducted a  study to generate recommendations for the United States Postal Service website. </b> The personnel at USPS wanted to check the interaction of users on new pages that included international shipping. They also wanted us to analyze features that could be added in the future, per what the users mentioned.
     				</p></p>
 
           <figure>
               <img src="assets/img/Personal/usps-page.png" class="img-fluid" alt="A page in USPS.com that was tested"><figcaption  align="center"><i>A page in USPS.com® that was tested</i></figcaption>
 
-    			<h3 class ="uppermargin"><strong>My Role </strong></h3>
+    			<h3 class ="uppermargin headers"><strong>My Role </strong></h3>
     			<p class="justified paragraph">  As a User Experience Specialist, my task included conducting interviews, note-taking, and data analysis for critical pointers. My team and I then provided recommendations based on the analyzed data.</p>
 
-    		<h3 class="uppermargin"><strong>Outcome</strong></h3>
+    		<h3 class="uppermargin headers"><strong>Outcome</strong></h3>
     		<p class="justified paragraph">Provided recommendations based on scenario-based testing/interviews for updated pages of USPS.com® </p>
 
-        <h3 class="uppermargin"><strong>Goals</strong></h3>
+        <h3 class="uppermargin headers"><strong>Goals</strong></h3>
         <p class="justified paragraph">
-          <b class="textbackground3">Scenario-based testing/interview  to obtain feedback on 3 updated pages on USPS.com® (International Mail & Shipping Services, How to Send a Letter or Postcard: International, and How to Send a Package: International). </b>​ </p>
+          <b class="textbackground2">Scenario-based testing/interview  to obtain feedback on 3 updated pages on USPS.com® (International Mail & Shipping Services, How to Send a Letter or Postcard: International, and How to Send a Package: International). </b>​ </p>
 
-          <p class="justified paragraph">Participant review of different proposed homepage Step Treatment designs. </p>​
+          <p class="justified paragraph">Participant review of different proposed homepage Step Treatment designs. </p>
 
           <figure>
               <img src="assets/img/Personal/postbox.png" class="avatar6" alt="Landing Page of the Redesigned Website">
               <figcaption  align="center"><i>A postbox</i></figcaption>
 
 
-    <h3 class ="uppermargin"><strong>Challenges</strong></h3>
+    <h3 class ="uppermargin headers"><strong>Challenges</strong></h3>
     <ul><li class="justified paragraph">  Combating participant no-shows</li>
     <li class="justified paragraph"> Maintaining attention span over 80 minute long interviews.</li>
     <li class="justified paragraph"> The Facilitator Guide creation was time-consuming and exhaustive.</li>
@@ -135,7 +135,7 @@
 
 
 <div class="container">
-	<h3 class ="uppermargin"><strong>Study Structure</strong></h3>
+	<h3 class ="uppermargin headers"><strong>Study Structure</strong></h3>
 	<p class="justified paragraph"> 24 usability test sessions conducted remotely in November 2021.​ </p>
  <p class= "justified paragraph"> Each session was approximately 80 minutes.</p>
  <p class ="paragraph">   Sessions were split into those conducted on mobile and those on desktop, along with those mailing and shipping primarily for personal (consumer) reasons, business reasons, or a bit of both (hybrid).
@@ -176,7 +176,7 @@
 </section>
 
 <div class="container">
-  <h3 class="uppermargin3"><Strong>Some Findings from the Interviews </Strong></h3>
+  <h3 class="uppermargin3 headers"><Strong>Some Findings from the Interviews </Strong></h3>
   <p class="justified paragraph">
       From the exhaustive interviews conducted, interesting findings emerged.
     </p>
@@ -199,7 +199,7 @@
   </div>
 
 <div class="container">
-  <h3 class="uppermargin3"><Strong>Recommendations  </Strong></h3>
+  <h3 class="uppermargin3 headers"><Strong>Recommendations</Strong></h3>
   <img src="assets/img/Personal/Screenshot 2022-05-06 031021.png" class="img-fluid uppermargin" alt="Image showing a recommendation">
 
   <img src="assets/img/Personal/Screenshot 2022-05-06 031609.png" class="img-fluid uppermargin3" alt="Image showing a recommendation">
@@ -207,19 +207,20 @@
 
   <section>
     <div class="container">
-      <h3><b>Impact</b></h2>
-      <p class="justified paragraph">Recommendations to improve the overall User Experience of users visiting USPS.com®</b>. </p>
-      <p class="justified paragraph">Simpler navigation across pages. </p>
-      <p class="justified paragraph">Placement of images where required for improved readability </p>
-
+      <h3 class="headers"><b>Impact</b></h2>
+      <ul><li class="justified paragraph">Recommendations to improve the overall User Experience of users visiting USPS.com®</b>. </li>
+      <li class="justified paragraph">Simpler navigation across pages. </li>
+      <li class="justified paragraph">Placement of images where required for improved readability </li>
+</ul>
+      
     </div>
 
   <div class="container">
-        <h3 class="uppermargin"><strong>Next Steps</strong></h3>
+        <h3 class="uppermargin headers"><strong>Next Steps</strong></h3>
         <p class="justified paragraph">Depending on the application and development of the features and improvements provided by the participants, long-term observation would be beneficial to measure the impact and success of the proposed changes. Without numbers, it becomes difficult for UX Researchers to measure the true effect of the recommendations provided</p>
 
 
-  <h3 class="uppermargin"><b>Takeaways</b></h2>
+  <h3 class="uppermargin headers"><b>Takeaways</b></h2>
   <p class="justified paragraph bottompadding">
   80-minute interviews are exhaustive, and recruiting is a lengthy process. As a researcher, it is paramount to have enormous patience until the study is complete. Qualitative coding helps in analyzing the findings. One key takeaway is that each participant's different views can lead to different perspectives. Bias plays a significant role in the type of answer the user provides. No-shows in long-drawn studies can prove tricky, so having back-up participants proves helpful.
   </p>
