--- a/research.html
+++ b/research.html
@@ -15,6 +15,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Lexend Deca' rel='stylesheet'>
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -76,7 +77,7 @@
   <section id="about-page" class="d-flex flex-column justify-content-center">
 
   <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1 align="center"><b>Research</b></h1>
+      <h1 align="center"><b class="headers">Research</b></h1>
   <div class="devicer"></div>
     </div>
   </section>
@@ -86,8 +87,8 @@
 
     <section>
       <div class="container grid default-grid">
-        <h3>Web4All 2022</h3>
-        <h4><strong> How and Why We Run: Investigating the Experiences of Blind and Visually-Impaired Runners</strong></h4>
+        <h3 class="headers">Web4All 2022</h3>
+        <h4 class="headers"><strong> How and Why We Run: Investigating the Experiences of Blind and Visually-Impaired Runners</strong></h4>
         <p>
           Paper appeared at the Web4All conference 2022. Our team from the University of Maryland, Baltimore County, submitted a paper that appeared at the Web4All conference. This work outlined the experiences of Blind and visually impaired runners. Here is the abstract for the same:
         </p>
@@ -110,8 +111,8 @@
 
     <section>
       <div class="container grid default-grid">
-        <h3>EduCHI’22: 4th Annual Symposium on HCI Education</h3>
-        <h4><strong> HCI Knowledge Dissemination in South Asia through both Coursework and Community Engagement </strong></h4>
+        <h3 class="headers">EduCHI’22: 4th Annual Symposium on HCI Education</h3>
+        <h4 class="headers"><strong> HCI Knowledge Dissemination in South Asia through both Coursework and Community Engagement </strong></h4>
         <p>
           Our team of researchers from South Asia submitted a paper to EduCHI 2022 on the topic of HCI knowledge exposure to students in South Asia. Here is the abstract for the same:
         </p>
@@ -130,8 +131,8 @@
 
     <section>
       <div class="container uppermargin grid default-grid">
-        <h3>ASSETS 2021</h3>
-        <h4><strong>Investigating the navigational habits of people who are blind in India</strong></h4>
+        <h3 class="headers">ASSETS 2021</h3>
+        <h4 class="headers"><strong>Investigating the navigational habits of people who are blind in India</strong></h4>
         <p>
           Our paper</i> appeared at  ASSETS 2021. Done in collaboration with Dr.Ravi Kuber and Dr.Foad Hamidi from the university of Maryland, Baltimore County, and Raghavendra Prasad from R.V College of Engineering. Here is the abstract for the same:
         </p>
