--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+<link href='https://fonts.googleapis.com/css?family=Lexend Deca' rel='stylesheet'>
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -73,7 +73,7 @@
   <section id="about-page" class="d-flex flex-column justify-content-center">
 
 <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1 align="center"><b>My Work </b></h1>
+      <h1 align="center"><b class="headers">My Work </b></h1>
 <div class="devicer"></div>
     </div>
   </section><!-- End Hero -->
@@ -97,13 +97,13 @@
 		<section class="container">
             <div class="container uppermargin grid default-grid">
                   <div class="row row-xs-sm sample-row">
-              <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333"><strong> Data Center Maintenance and Repair Software - Google for Grid Dynamics</strong></h1></div>
+              <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333" class="headers"><strong> Data Center Maintenance and Repair Software - Google for Grid Dynamics</strong></h1></div>
                 <p class="paragraph2 justified uppermargin">
-                    At Grid Dynamics, I worked for the client (Google) in their data center maintenance and repair software. </p>
-				<p class ="paragraph2 justified uppermargin2">I ran qualitative studies - conducting interviews, focus groups, creating and analyzing surveys, provide insights and recommendations based on user data to the broader design and engineering teams to create a product with a seamless experience for personnel at the data centers.</b>
+                    At Grid Dynamics, my client was Google. I conducted user research on Google's Data Center Maintenance and Repair Software. </p>
+				<p class ="paragraph2  uppermargin2">I ran qualitative studies - conducted interviews, Focus Groups, Created and Analyzed Surveys,   Provided insights and recommendations based on user data to the broader design and engineering teams to create a product with a seamless user experience for Data Center Technicians.</b>
                 </p>
 
-              <a href="dcms.html"><button class="custom-btn btn-1">READ MORE </button></a></button></div>
+              <a href="dcms.html"><button class="custom-btn btn-1 headers">READ MORE </button></a></button></div>
 
                 <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/grid.jpeg" class="img-fluid" alt="Thomson Retuers Logo"></div></div>
                 </div>
@@ -112,12 +112,12 @@
       <section class="containerblue">
             <div class="container uppermargin grid default-grid">
                   <div class="row row-xs-sm sample-row">
-              <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333"><strong> Rapid Research (Tax and Accounting)- Thomson Reuters</strong></h1></div>
+              <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333" class="headers"><strong> Rapid Research (Tax and Accounting) - Thomson Reuters</strong></h1></div>
                 <p class="paragraph2 justified uppermargin">
-                    At Reuters, I worked as the lead researcher on the rapid research program where I ran qualitative studies in the tax and accounting domain on product features, workflows, and concepts for quicktime results and decisions to inform in a short period. (Bi-weekly cadence)
+                    At Reuters, I worked as the lead researcher on the <b>Rapid Research Program</b> where I ran qualitative studies in the Tax and Accounting domain on various product features, workflows, and concepts for quicktime results and decisions to inform in a short period. (Bi-weekly cadence)
                 </p>
 
-              <a href="rapidresearch.html"><button class="custom-btn btn-1">READ MORE </button></a></button></div>
+              <a href="rapidresearch.html"><button class="custom-btn btn-1 headers">READ MORE </button></a></button></div>
 
                 <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/TR_Logo.png" class="img-fluid" alt="Thomson Retuers Logo"></div></div>
                 </div>
@@ -127,12 +127,12 @@
       <section class="container">
         <div class="container grid default-grid">
               <div class="row row-xs-sm sample-row">
-          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#333333"><strong>USPS.com Website Usability Study - UserWorks, Inc.</strong></h1></div>
+          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#333333" class="headers"><strong>USPS.com Website Usability Study - UserWorks, Inc.</strong></h1></div>
             <p class="paragraph2 justified uppermargin">
-              Our team at UserWorks conducted a usability study over a period of two months to generate recommendations for the United States Postal Service website (USPS.com).
+              While at UserWorks, I conducted a usability study over a period of two months to generate recommendations for the United States Postal Service (USPS) <a href="www.USPS.com">website</a>.
             </p>
 
-         <button class="custom-btn btn-1" onclick="window.location.href='postal.html'"> READ MORE </a></button>
+         <button class="custom-btn btn-1 headers" onclick="window.location.href='postal.html'"> READ MORE </a></button>
       </div>
             <div class="col-md-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/UW_Logo.png" class="avatar8 uppermargin3" alt="UW_logo"></div></div>
             </div>
@@ -143,12 +143,12 @@
 <section class="containerblue">
       <div class="container uppermargin grid default-grid">
             <div class="row row-xs-sm sample-row">
-        <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333"><strong> TriDeNT: Obstacle detection device for visually impaired runners</strong></h1></div>
+        <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333" class="headers"><strong> TriDeNT: Obstacle detection device for visually impaired runners</strong></h1></div>
           <p class="paragraph2 justified uppermargin">
             An industry-funded study to assess how blind users interact with technology while running. The end goal of the study was to develop a prototype that aids them in obstacle detection while on the run. Focus on HCI research and User-Centered Design.
           </p>
 
-        <a href="navigational-aid.html"><button class="custom-btn btn-1">READ MORE </button></a></button></div>
+        <a href="navigational-aid.html"><button class="custom-btn btn-1 headers">READ MORE </button></a></button></div>
 
           <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/prototype_color.png" class="img-fluid uppermargin3" alt="Image of the device that aids blind runners."></div></div>
           </div>
