--- a/rapidresearch.html
+++ b/rapidresearch.html
@@ -15,7 +15,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+<link href='https://fonts.googleapis.com/css?family=Lexend Deca' rel='stylesheet'>
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -79,7 +79,7 @@
 
   <section id="about-page" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-  <h1 align="center"><b>Rapid Research (Tax and Accounting)- Thomson Reuters</b></h1>
+  <h1 align="center"><b class="headers">Rapid Research (Tax and Accounting) - Thomson Reuters</b></h1>
 
       <div class="devicer"></div>
     </div>
@@ -88,17 +88,15 @@
     <div class="container">
 
     			<p class="justified uppermargin3">
-    				<h3><b>Background and Role</b></h3>
-    				<p class=" justified paragraph">
+    				<h3 class="headers"><b>Background and Role</b></h3>
+    				<p class="justified paragraph">
               As the <b class="textbackground2">Lead User Experience Researcher </b> conducting Rapid Research (Qualitative), I helped make the vision to build out the Rapid Research Program across the Tax & Accounting businesses at Thomson Reuters a reality. I operated with two products - <b class="textbackground2">Onvio</b> and <b class="textbackground2">UltraTax</b>. <a href ="https://tax.thomsonreuters.com/us/en/onvio/firm-management"> <i>Onvio</i></a> is a Cloud-based accounting software that includes document management, time and billing, and online client portals.  <a href ="https://tax.thomsonreuters.com/en/products/ultratax-cs" target="_blank"><i> UltraTax</i> </a> is a professional tax preparation software with a full line of federal, state, and local tax programs that cuts your tax workflow time and increase your productivity.
-              <p class=" justified paragraph">
-              The process took me from intake meetings to report readout meetings with key stakeholders. I owned each task and the process itself from start to finish. The tasks in a typical study include brainstorming with the team to understand the concept/scenarios/prototype, writing recruitment screeners, writing the facilitator guide, conducting sessions with customers, meeting with internal stakeholders for debriefs (Fellow UX Researchers, UX Designers, Content Designers, Accessibility Specialists, Product Managers, and Product Owners, UX Directors).</p>
-
+              
               <figure>
                   <img src="assets/img/Personal/interview.png" class="avatar6" alt="interview graphic">
 
 
-    		<h3 class="uppermargin"><strong>Outcomes</strong></h3>
+    		<h3 class="uppermargin headers"><strong>Outcomes</strong></h3>
     		<p class="justified paragraph">Quick turnaround times (from intake requests to disseminating findings) and adding more flexibility in how feedback is captured. High-impact, actionable qualitative insights delivered on a bi-weekly basis. Involves different features, concepts, and workflows across different products (ONVIO and UltraTax)</p>
 
         <div class="counter">
@@ -137,7 +135,7 @@
         </div>
 
 
-    <h3 class ="uppermargin"><strong>Challenges</strong></h3>
+    <h3 class ="uppermargin headers"><strong>Challenges</strong></h3>
     <ul><li class="justified paragraph">  An exhaustive recruitment process may lead to a delay if other studies are in the queue.</li>
     <li class="justified paragraph"> Occasionally, it isn't easy to fit all the questions in the guide within the session duration.</li>
     <li class="justified paragraph"> Content importance.</li>
@@ -159,7 +157,7 @@
     </div>
 
 <div class="container">
-  <h3 class ="uppermargin"><strong>Tools Involved In My Research</strong></h3>
+  <h3 class ="uppermargin headers"><strong>Tools Involved In My Research</strong></h3>
   <div class="row">
     <div class="col-md-6" align="center">
 
@@ -176,11 +174,14 @@
 </div>
 
 <div class="container">
-  <h3><Strong>Process</Strong></h3>
+  <h3 class="headers"><Strong>Process</Strong></h3>
   <p class="justified paragraph">
-      I followed a rigorous, yet streamlined process for my studies.
+      I followed a rigorous, yet streamlined process for my studies. </p>
+      
+      <p class="justified paragraph"> The process took me from intake meetings to report readout meetings with key stakeholders. I owned each task and the process itself from start to finish. The tasks in a typical study include brainstorming with the team to understand the concept/scenarios/prototype, writing recruitment screeners, writing the facilitator guide, conducting sessions with customers, meeting with internal stakeholders for debriefs (Fellow UX Researchers, UX Designers, Content Designers, Accessibility Specialists, Product Managers, and Product Owners, UX Directors).</p>
+
     </p>
-    <figure>
+    <figure class="uppermargin3">
         <img src="assets/img/Personal/RR_study.png" class="img-fluid" alt="Study outline">
   </div>
 
@@ -188,9 +189,9 @@
 
   <section>
     <div class="container">
-      <h3><b>Impact</b></h3>
-        <figure>
-            <img src="assets/img/Personal/bullseye.png" class="avatar6" alt="bulls eye">
+      <h3 class="headers"><b>Impact</b></h3>
+       <!-- <figure>
+            <img src="assets/img/Personal/bullseye.png" class="avatar6" alt="bulls eye"> -->
       <ul><li class="justified paragraph">The results from my studies helped teams make informed decisions on design changes for various workflows and concepts across tax products. </li>
       <li class="justified paragraph">Incorporating participants with disabilities in the studies. Our team was the first research team at Thomson Reuters to incorporate such participants.</li>
       <li class="justified paragraph">Identifying key areas of enhancements and improved user experience based on qualitative data provided by the customers.</li>
@@ -205,7 +206,7 @@
 </p>
  -->
 <div class="container">
-  <h3 class="uppermargin"><b>Takeaways</b></h2>
+  <h3 class="uppermargin headers"><b>Takeaways</b></h2>
   <p class="justified paragraph bottompadding">
     This type of qualitative research is as rigorous and fast-paced as they come. Thirty minutes is all we have with the customer, and often, the prototype drives the study, with the guide only being a support tool. The team must first study complex workflows to prioritize the features and tasks and then present them to the user. A significant part of such studies is the continuous interaction with members of the larger org ( Fellow UX Researchers, UX Designers, Content Designers, Accessibility Specialists, Product Managers, and Product Owners) and the customers. However, such a process proves difficult if no prototype is available or there is no context to what is being tested. Getting acclimatized to how rapid research works takes a little time, but once the dust settles, it is exciting and moves at lightspeed.
 
