--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
         <li class="nav-item active">
-          <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
+          <a class="nav-link" href="about.html"><span class="whitecolor">BIO</span></a>
         </li>
 
         <!--<li class="nav-item active">
